2005-07-13  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* game.cc: fix crashing german BG (its IDENTITY is "ULTIMA7")

2005-07-11  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* mapedit/studio.h, etc: Implemented game detection code and ready spots.
	  I am trusting exult.cfg to be accurate, which I am not sure is wise :-)
	* objs.cc, etc: In fixing the cannon, I broke the Test of Virtue. Both work
	  now. Powderkegs are now dangerous to attack, as in the original.

2005-07-10  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* shapes/shapeinf.h, mapedit/exult_studio.glade, shapeedit.cc: Corrected
	  damage type (from 'poison' to 'lightning') and added two other damage
	  types ('ethereal' and 'sonic') and immunities -- both of which are used
	  in BG, but not in SI. Also, left shapeedit.cc pratically ready to get
	  'ready spots' working (it does for BG already).
	* actors.cc: Implemented immunities/vulnerabilities. Also allowed actors
	  with cant_die flag to appear to be wounded (flash with red outline), as
	  in the original. Last, prevented party members from calling the guards if
	  they die because of the Avatar.

2005-07-09    <jeff@mini.nerble.net>

	* mapedit/npclst.cc (Npc_chooser): Added NPC browser.

2005-07-10  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* mapedit/exult_studio.glade, shapeedit.cc: New info from weapons.dat and
	  ammo.dat can now be edited in Exult Studio. Also, modified the 'ready spot'
	  menu from 'Shape Info' window in preparation to getting it to work.
	* content/sifixes/resurrect.uc: Fixed resurrection bug when target NPC was
	  alive but in the House of the Dead.

2005-07-08  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Implemented missile rotation and speed, using data from weapons.dat; this
	  data is now saved and loaded correctly.
	* Modified the animation speed of attacks; it now uses get_std_delay to
	  determine speed.
	* Modified very slightly the way attack frames are handled.